language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:8:15 ───
   │
 8 │         let B<CupC<R>> {} = abort 0;
   │               ^^^^^^^ 'copy' constraint not satisifed
   ·
 8 │         let B<CupC<R>> {} = abort 0;
   │                    - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:9:11 ───
   │
 9 │         B<CupC<R>> {} = abort 0;
   │           ^^^^^^^ 'copy' constraint not satisifed
   ·
 9 │         B<CupC<R>> {} = abort 0;
   │                - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

